# qrackbind

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  justfile  pyproject.toml  pyrightconfig.json
.github/workflows/: wheels.yml
bindings/: circuit.cpp  exceptions.cpp  gate_helpers.h  noisy.cpp  qrackbind_core.h  qrackbind_ext.cpp  simulator.cpp  stabilizer.cpp
cmake/: FetchQrack.cmake
scripts/: install_qrack.py  install_qrack.sh
specs/: bloqade_pyrack_dependency.md  compatibility_review.md  phase_1.md  phase_10.md  phase_11.md  phase_12.md  phase_13.md  phase_14.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  phase_7.md  phase_8.md  phase_9.md  type_casting.md
src/qrackbind/: __init__.py  _core.pyi
src/qrackbind/pennylane/: README.md  __init__.py  _dispatch.py  device.py  qrack.toml  qrack_stabilizer.toml  stabilizer_device.py
tests/: conftest.py  test_amplitudes.py  test_arithmetic.py  test_circuit.py  test_constructor.py  test_density_matrix.py  test_dynamic_alloc.py  test_exceptions.py  test_measurement.py  test_noisy_simulator.py  test_pauli.py  test_pennylane_device.py  test_qrack_gates.py  test_qracksim.py  test_stabilizers.py  test_state_vector.py
tests/pennylane/: conftest.py  test_apply.py  test_device.py  test_integration.py  test_stabilizer_device.py  test_units.py
