[project]
name = "qrackbind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martin Stokoe", email = "martin@stokoe.net" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
pennylane = [
    "pennylane>=0.43",
]
dev = [
    "auditwheel>=6.4.2",
    "nanobind>=2.8.0",
    "nanobind-stubgen>=0.1.0",
    "pennylane>=0.43",
    "pytest>=8.4.2",
    "pytest-cpp>=2.6.0",
    "ruff>=0.14.5",
    "twine>=6.2.0",
    "pyright>=1.1",
    "scikit-build-core>=0.12"
]

[project.entry-points."pennylane.plugins"]
"qrackbind.simulator"        = "qrackbind.pennylane.device:QrackDevice"
"qrackbind.stabilizer"       = "qrackbind.pennylane.stabilizer_device:QrackStabilizerDevice"
"qrackbind.stabilizer_hybrid" = "qrackbind.pennylane.stabilizer_device:QrackStabilizerHybridDevice"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "bindings/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]

[build-system]
requires = ["scikit-build-core>=0.12", "nanobind>=2.8.0"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "auditwheel>=6.4.2",
    "nanobind>=2.8.0",
    "nanobind-stubgen>=0.1.0",
    "pytest>=8.4.2",
    "pytest-cpp>=2.6.0",
    "ruff>=0.14.5",
    "twine>=6.2.0",
    "pyright>=1.1",
    "scikit-build-core>=0.12"
]
