[project]
name = "qrackbind"
version = "0.2.2"
description = "nanobind Python bindings for the Qrack quantum simulator"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Martin Stokoe", email = "martin@stokoe.net" }
]
keywords = ["quantum", "simulator", "qrack", "nanobind"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
]

[project.urls]
Homepage   = "https://github.com/stokomax/qrackbind"
Repository = "https://github.com/stokomax/qrackbind"
"Bug Tracker" = "https://github.com/stokomax/qrackbind/issues"

[project.optional-dependencies]
dev = [
    "auditwheel>=6.4.2",
    "nanobind>=2.8.0",
    "nanobind-stubgen>=0.1.0",
    "pytest>=8.4.2",
    "pytest-cpp>=2.6.0",
    "ruff>=0.14.5",
    "twine>=6.2.0",
    "pyright>=1.1",
    "scikit-build-core>=0.12"
]


[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir        = "build/{wheel_tag}"
wheel.py-api     = "cp312"           # emit cp312-abi3-… tag (stable ABI, Python 3.12+)

[tool.scikit-build.cmake.define]
# Defaults forwarded to CMake at build time.
# Override on the command line with:
#   uv pip install . --config-settings "cmake.define.ENABLE_OPENCL=OFF"
ENABLE_OPENCL = "ON"
ENABLE_CUDA   = "OFF"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "bindings/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]

[tool.cibuildwheel]
# Stable ABI: one cp312-abi3 wheel runs on Python 3.12+
build = "cp312-manylinux_x86_64"

[tool.cibuildwheel.linux]
# manylinux_2_34 (AlmaLinux 9, glibc 2.34) is the highest standard PyPA image
# available for x86_64 locally. We download the pre-built Qrack archive rather
# than building from source to avoid a lengthy (and OOM-prone) C++ compile.
# auditwheel will detect the real glibc requirements from the bundled libqrack.so
# and tag the wheel accordingly (may land on manylinux_2_39 or similar).
manylinux-x86_64-image = "manylinux_2_34"

# Build Qrack v10.7.0 from source inside the manylinux_2_34 container.
#
# WHY NOT THE PRE-BUILT ARCHIVE?
# The release archive (libqrack-manylinux_2_39_x86_64.zip) was compiled on
# a glibc 2.39 system. It references __isoc23_strtol — an unversioned glibc
# symbol that first appeared in glibc 2.38. auditwheel does not detect
# unversioned symbol requirements, so the wheel gets mislabelled manylinux_2_34
# but fails at import time on any system with glibc < 2.38.
#
# Building from source inside this manylinux_2_34 container ensures every
# symbol used by libqrack.a comes from glibc 2.34, producing a wheel that
# truly runs on manylinux_2_34+ (AlmaLinux 9, Ubuntu 22.04+, etc.)
#
# Expect this step to take roughly 10–20 minutes.
before-all = """
set -e
# xxd (in vim-common) is required by Qrack's cmake to embed .cl kernels as headers.
dnf install -y cmake git ninja-build ocl-icd-devel vim-common

# AlmaLinux 9's opencl-headers package omits CL/opencl.hpp (the C++ bindings).
# Download it from the Khronos OpenCL-CLHPP repository.
curl -fsSL \
    https://raw.githubusercontent.com/KhronosGroup/OpenCL-CLHPP/v2.0.16/include/CL/opencl.hpp \
    -o /usr/include/CL/opencl.hpp

# Clone and build Qrack at the same tag as the release archive.
git clone --depth 1 --branch vm6502q.v10.7.0 \
    https://github.com/unitaryfoundation/qrack.git /tmp/qrack_src

cmake -B /tmp/qrack_build -S /tmp/qrack_src -G Ninja \\
      -DCMAKE_BUILD_TYPE=Release \\
      -DENABLE_OPENCL=ON \\
      -DENABLE_CUDA=OFF \\
      -DBUILD_SHARED_LIBS=OFF \\
      -DCMAKE_INSTALL_PREFIX=/usr/local

cmake --build /tmp/qrack_build --parallel $(nproc)
cmake --install /tmp/qrack_build
ldconfig
"""

# libqrack is static — no shared library to bundle.
# Exclude libOpenCL.so.1 (ICD loader): must be provided by the user's distro
# at runtime; bundling it would break GPU driver discovery on the user's system.
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel} --exclude libOpenCL.so.1"

# After a cmake install to /usr/local the library lands at /usr/local/lib.
environment = { QRACK_LIB_DIR = "/usr/local/lib", QRACK_INCLUDE_DIR = "/usr/local/include/qrack" }
test-command = """python -c "from qrackbind import QrackSimulator; s = QrackSimulator(qubitCount=1); s.h(0); print('smoke test OK')\""""

[build-system]
requires = ["scikit-build-core>=0.12", "nanobind>=2.8.0"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "auditwheel>=6.4.2",
    "nanobind>=2.8.0",
    "nanobind-stubgen>=0.1.0",
    "pytest>=8.4.2",
    "pytest-cpp>=2.6.0",
    "ruff>=0.14.5",
    "twine>=6.2.0",
    "pyright>=1.1",
    "scikit-build-core>=0.12"
]
